# oxiphoton

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md
benches/: bpm_bench.rs  fdtd_bench.rs  fdtd_gpu_bench.rs  smatrix_bench.rs
examples/: anisotropic_crystal.rs  bloch_band_structure.rs  fdtd_3d_waveguide.rs  fdtd_gpu_acceleration.rs  graphene_plasmon.rs  metalens_design.rs  photonic_crystal.rs  ring_modulator.rs  ring_resonator.rs  s_parameter_extraction.rs  solar_cell_absorption.rs  waveguide_mode.rs
src/: error.rs  lib.rs  prelude.rs
src/adaptive_optics/: atmosphere.rs  control.rs  deformable_mirror.rs  mod.rs  wavefront_sensor.rs
src/amplifiers/: edfa.rs  mod.rs  noise.rs  raman_amp.rs  soa.rs
src/beam_quality/: beam_profiler.rs  caustic.rs  iso_standard.rs  m2_factor.rs  mod.rs
src/biophotonics/: fluorescence.rs  mod.rs  tissue.rs
src/bpm/: bidirectional.rs  fd_bpm.rs  fft_bpm.rs  mod.rs  vector_bpm.rs  wide_angle.rs
src/coherence/: mod.rs  mutual_coherence.rs  spatial.rs  speckle.rs  temporal.rs
src/comms/: link_budget.rs  metrics.rs  mod.rs  modulation.rs
src/detector/: mod.rs  noise.rs  photodiode.rs  single_photon.rs
src/devices/: mod.rs
src/diffractive/: grating.rs  mod.rs  propagation.rs
src/entanglement/: mod.rs  qkd.rs  (+3 more)
tests/: adjoint_3d_fdtd.rs  adjoint_3d_vector.rs  adjoint_compute_adjoint_field.rs  adjoint_fdtd_forward.rs  anisotropic_fdtd.rs  ar_coating.rs  bend_loss_marcuse.rs  bgn_harmon1994_gaas.rs  bloch_bc.rs  bpm_validation.rs  bragg_mirror.rs  dammann_optimization.rs  dd_fermi_dirac_wiring.rs  device_integration.rs  devices.rs  eme_interface_smatrix.rs  eme_orthogonality.rs  eme_reciprocity.rs  eye_diagram.rs  fdtd_1d.rs  fdtd_2d.rs  fdtd_3d.rs  fdtd_3d_cpml.rs  fdtd_3d_validation.rs  fdtd_dispersive_3d.rs  fdtd_gpu_validation.rs  fiber_validation.rs  gdsii_binary.rs  geometry_tests.rs  gnlse_rk4ip.rs  graphene.rs  integrated_spdc.rs  interconnect_composer.rs  inverse_design.rs  material_extended.rs  mode_extended.rs  mode_solver.rs  optical_interconnect.rs  parallel_cpml_2d_validation.rs  parallel_cpml_validation.rs  (+26 more)
(+396 files in other folders)
